fixed other styling issue, text hard to read sometimes

--- a/src/index.css
+++ b/src/index.css
@@ -75,10 +75,6 @@ cast-media-player {
   gap: 20px;
   margin-bottom: 1.5%;
   margin-left: 2.5%;
-  background: rgba(0, 0, 0, 0.4);
-  backdrop-filter: blur(12px);
-  -webkit-backdrop-filter: blur(12px);
-  border-radius: 16px;
   padding: 24px 40px;
 }
 
